Fixed Z-index
YouTube video was unclickable due to incorrect z-index on the div containing it.

--- a/style.css
+++ b/style.css
@@ -30,7 +30,7 @@ html, body {
 
 
 #responsive {
-	z-index: -1;
+	z-index: 0;
 	width: 100%;
 	height: 0;
 	padding-bottom: 56.25%;
